--- a/CleanerSeeker/CleanerSeeker/Info.plist
+++ b/CleanerSeeker/CleanerSeeker/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Use photo library to set your profile picture</string>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>Use media library to set your profile picture</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Use your camera to make your original avatar</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
