--- a/CleanerSeeker/CleanerSeeker/Info.plist
+++ b/CleanerSeeker/CleanerSeeker/Info.plist
@@ -2,14 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Use photo library to set your profile picture</string>
-	<key>NSAppleMusicUsageDescription</key>
-	<string>Use media library to set your profile picture</string>
-	<key>NSCameraUsageDescription</key>
-	<string>Use your camera to make your original avatar</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
+	<key>CFBundleDisplayName</key>
+	<string>Cleaner Seeker</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -26,6 +22,12 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>Use media library to set your profile picture</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Use your camera to make your original avatar</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Use photo library to set your profile picture</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
